modified some pages

--- a/air.html
+++ b/air.html
@@ -27,22 +27,21 @@
 <body>
 
     <!-- Start your project here-->
-    <section id="nav-1">
+    <section id="nav-1" class="mb-3">
         <!--Navbar -->
-        <nav class="navbar navbar-1 navbar-expand-lg navbar-dark rgba-white-slight fixed-top">
+        <nav class="navbar navbar-1 navbar-expand-lg navbar-light fixed-top">
             <div class="container">
-                <a class="navbar-brand" href="home.html">
-                    <div class="logo">
-                        <img src="img/agri_logo1.png">
-                    </div>
-                </a>
-                <button class="navbar-toggler" style="background-color: #78b122;" type="button" data-toggle="collapse"
+                <a class="navbar-brand" href="index.html">
+                    <div>
+                      <img  class="logo" src="img/Logo with Side Text - White.png"></div>
+                  </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent-4" aria-controls="navbarSupportedContent-4"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
-                    <ul class="navbar-nav ml-auto nav-items flex-center">
+                    <ul class="navbar-nav ml-auto nav-items">
                         <li class="nav-item">
                             <a class="nav-link m-1" href="team.html" style="color: #78b122;font-weight: 500;">
                                 <p class="m-1">TEAM</p>
@@ -53,24 +52,9 @@
                                 <p class="m-1">VISION</p>
                             </a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link m-1" id="navbarDropdownMenuLink" data-toggle="dropdown"
-                                aria-haspopup="true" aria-expanded="false" style="color: #78b122;font-weight: 500;">
-                                <p class="m-1">PRODUCTS</p>
-                            </a>
-                            <div class="dropdown-menu no-gutters">
-                                <a class="dropdown-item" href="product.html"
-                                    style="color: #78b122;font-weight: 500;font-size:12px;">AGRICULTURAL PRODUCTS</a>
-                                <a class="dropdown-item" href="product.html"
-                                    style="color: #78b122;font-weight: 500;font-size:12px;">AIRFARMS</a>
-                                <a class="dropdown-item" href="product.html"
-                                    style="color: #78b122;font-weight: 500;font-size:12px;">GROWBAGS</a>
-                            </div>
-                        </li>
-                        </li>
                         <li class="nav-item">
-                            <a class="nav-link m-1" href="flashapp.html" style="color: #78b122;font-weight: 500;">
-                                <p class="m-1">DART</p>
+                            <a class="nav-link m-1" href="product.html" style="color: #78b122;font-weight: 500;">
+                                <p class="m-1">PRODUCTS</p>
                             </a>
                         </li>
                         <li class="nav-item">
@@ -79,7 +63,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link m-1" href="home.html" style="color: #78b122;font-weight: 500;">
+                            <a class="nav-link m-1" href="index.html" style="color: #78b122;font-weight: 500;">
                                 <p class="m-1">CONTACT</p>
                             </a>
                         </li>
@@ -95,11 +79,9 @@
         <!--/.Navbar -->
     </section>
     <section id="head">
-        <div class="row">
-            <h1 class="mx-auto agri-head">Airfarms</h1>
+        <div class="row py-5">
+            <h1 class="mx-auto py-5">Airfarms</h1>
         </div>
-    </section>
-    <section id="product-section">
         <div class="container">
             <div class="row">
                 <!--Start Welcome Image-->
@@ -113,13 +95,13 @@
                 <!--Start Welcome Content-->
                 <div class="col-sm-6 air-pdt">
                     <div class="air-prod" style="margin-top: auto;">
-                        <h2>Aeroponics</h2>
+                        <h2 class="text-center">Aeroponics</h2>
                         <p>Lorem ipsum dolor sit amet, consectetuer
                             adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam
                             malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper
                             suscipit</p>
-                    <a href="order.html" class="mx-auto">
-                        <button type="button" class="btn section-button" style="background-color: #78b122;border-radius: 50px;">Buy Now</button>
+                    <a href="#" class="mx-auto">
+                        <button type="button" class="btn section-button1" style="background-color: #78b122;border-radius: 50px;">Buy Now</button>
                         </a>
                     </div>
 
@@ -131,22 +113,22 @@
             <div class="row mt-5">
                 <!--Start Welcome Image-->
                 <div class="col-sm-6">
-                    <div class="welcome-img flex-center">
-                        <img src="img/air2.png" class="img-responsive" alt="Image">
+                    <div class=" flex-center">
+                        <img class="welcome-img2" src="img/air2.png" class="img-responsive" alt="Image">
                     </div>
                 </div>
                 <!--End Welcome Image-->
 
                 <!--Start Welcome Content-->
                 <div class="col-sm-6 air-pdt">
-                    <div class="air-prod" style="margin-top: auto;">
-                        <h2>Aeroponics</h2>
+                    <div class="air-prod mx-auto" style="margin-top: auto;">
+                        <h2 class="text-center">Aeroponics</h2>
                         <p>Lorem ipsum dolor sit amet, consectetuer
                             adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam
                             malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper
                             suscipit</p>
-                    <a href="order.html" class="mx-auto">
-                        <button type="button" class="btn section-button" style="background-color: #78b122;border-radius: 50px;">Buy Now</button>
+                    <a href="#" class="mx-auto">
+                        <button type="button" class="btn section-button1" style="background-color: #78b122;border-radius: 50px;">Buy Now</button>
                         </a>
                     </div>
 
@@ -156,6 +138,50 @@
             </div>
         </div>
     </section>
+    <section style="overflow-y: hidden;">
+
+        <div class="footer mb-5" style="position: relative; top: 50px; width: 100%;">
+          <footer class="text-center">
+            <a class="up-arrow" href="#nav-1" data-toggle="tooltip" title="TO TOP">
+              <i class="fas fa-angle-up"></i>      </a><br><br>
+            <p> <a href="team.html" data-toggle="tooltip" title="Visit team page">Team</a></p>
+            <p><a href="product.html" data-toggle="tooltip" title="Visit products page">Products </a></p>
+            <p><a href="services.html" data-toggle="tooltip" title="Visit services page">Services </a></p>
+            <p> <a href="vision.html" data-toggle="tooltip" title="Visit vision page">Vision</a></p>
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      
+            <!-- Social buttons -->
+            <ul class="list-unstyled list-inline text-center">
+              <li class="list-inline-item">
+                <a class="btn-floating btn-fb mx-1">
+                  <i class="fab fa-facebook-f"> </i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a class="btn-floating btn-tw mx-1">
+                  <i class="fab fa-twitter"> </i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a class="btn-floating btn-gplus mx-1">
+                  <i class="fab fa-google-plus-g"> </i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a class="btn-floating btn-li mx-1">
+                  <i class="fab fa-linkedin-in"> </i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a class="btn-floating btn-dribbble mx-1">
+                  <i class="fab fa-dribbble"> </i>
+                </a>
+              </li>
+            </ul>
+            <!-- Social buttons -->
+          </footer>
+        </div>
+        </section>
     <!-- End your project here-->
     <!-- Development version -->
     <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.js"></script>
