--- a/services.html
+++ b/services.html
@@ -20,26 +20,27 @@
   <link rel="stylesheet" href="css/mdb.min.css">
   <!-- Your custom styles (optional) -->
   <link rel="stylesheet" href="css/servicestyle.css">
+  <link rel="stylesheet" href="css/product.css">
+  
 </head>
 
-<body>
+<body style="overflow: hidden;">
 
   <!-- Start your project here-->
   <!--Navbar -->
   <section class="pb-5">
     <nav class="navbar navbar-1 navbar-expand-lg navbar-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="home.html">
-          <div class="logo">
-            <img src="img/agri_logo1.png">
-          </div>
+        <a class="navbar-brand" href="index.html">
+          <div>
+            <img  class="logo" src="img/Logo with Side Text - White.png"></div>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-4"
           aria-controls="navbarSupportedContent-4" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
-          <ul class="navbar-nav ml-auto nav-items flex-center">
+          <ul class="navbar-nav ml-auto nav-items">
             <li class="nav-item">
               <a class="nav-link m-1" href="team.html" style="color: #78b122;font-weight: 500;">
                 <p class="m-1">TEAM</p>
@@ -61,7 +62,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link m-1" href="home.html" style="color: #78b122;font-weight: 500;">
+              <a class="nav-link m-1" href="index.html" style="color: #78b122;font-weight: 500;">
                 <p class="m-1">CONTACT</p>
               </a>
             </li>
@@ -79,7 +80,7 @@
   <!--/.Navbar -->
   <div class="total container mx-auto pt-5">
     <!-- News jumbotron -->
-    <div class="jumbotron text-center hoverable p-4">
+    <div class="jumbotron text-center hoverable p-4 mt-5">
 
       <!-- Grid row -->
       <div class="row">
@@ -94,11 +95,12 @@
         <h6 class="h6 pb-1"><i class="fas fa-desktop pr-1"></i> Work</h6>
       </a> -->
 
-          <h4 class="h4 mb-4 text-center">About Service</h4>
+          <h2 class=" mb-4 text-center">About Service</h2>
 
-          <p class="font-weight-normal">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-            Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
-            galley of type and scrambled it to make a type specimen book. 
+          <p class="font-weight-normal " style="padding:20px;">Lorem Ipsum is simply dummy text of the printing and
+            typesetting industry. Lorem
+            Ipsum has been the industry's standard dummypx text ever since the 1500s, when an unknown printer took a
+            galley of type and scrambled it to make a type specimen book.
 
           </p>
           <!-- <p class="font-weight-normal">by <a><strong>Carine Fox</strong></a>, 19/08/2016</p> -->
@@ -126,16 +128,17 @@
       <!-- Grid row -->
 
     </div>
+    <h1 class="m-5 text-center">Services</h1>
     <!-- News jumbotron -->
     <!-- Card deck -->
     <div class="card-deck">
 
       <!-- Card -->
-      <div class="card mb-4">
+      <div class="card mb-5">
 
         <!--Card image-->
         <div class="view overlay">
-          <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/16.jpg" alt="Card image cap">
+          <img class="card-img-top" src="img/farmsetting.jpg" alt="Card image cap">
           <a href="#!">
             <div class="mask rgba-white-slight"></div>
           </a>
@@ -145,12 +148,12 @@
         <div class="card-body">
 
           <!--Title-->
-          <h4 class="card-title">Card title</h4>
+          <h4 class="card-title" style="color: #2f2e41;">Farm setting</h4>
           <!--Text-->
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
             content.</p>
           <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-          <button type="button" class="btn btn-light-blue btn-lg buttonprop">More</button>
+          <a href="farmset.html"><button type="button" class="btn  buttonprop" style="background-color: #78b122;color: #2f2e41;">More</button></a>
 
         </div>
 
@@ -158,11 +161,11 @@
       <!-- Card -->
 
       <!-- Card -->
-      <div class="card mb-4">
+      <div class="card mb-5">
 
         <!--Card image-->
         <div class="view overlay">
-          <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/14.jpg" alt="Card image cap">
+          <img class="card-img-top" src="img/farmsetting.jpg" alt="Card image cap">
           <a href="#!">
             <div class="mask rgba-white-slight"></div>
           </a>
@@ -172,12 +175,12 @@
         <div class="card-body">
 
           <!--Title-->
-          <h4 class="card-title">Card title</h4>
+          <h4 class="card-title" style="color: #2f2e41;">Farm planning</h4>
           <!--Text-->
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
             content.</p>
           <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-          <button type="button" class="btn btn-light-blue btn-lg buttonprop">More</button>
+          <a href="farmplan.html"><button type="button" class="btn  buttonprop" style="background-color: #78b122;color: #2f2e41;">More</button></a>
 
         </div>
 
@@ -185,11 +188,11 @@
       <!-- Card -->
 
       <!-- Card -->
-      <div class="card mb-4">
+      <div class="card mb-5">
 
         <!--Card image-->
         <div class="view overlay">
-          <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/15.jpg" alt="Card image cap">
+          <img class="card-img-top" src="img/greenhut.jpg" alt="Card image cap">
           <a href="#!">
             <div class="mask rgba-white-slight"></div>
           </a>
@@ -199,14 +202,14 @@
         <div class="card-body">
 
           <!--Title-->
-          <h4 class="card-title">Card title</h4>
+          <h4 class="card-title" style="color: #2f2e41;">Green hut</h4>
           <!--Text-->
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
             content.</p>
           <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-          <button type="button" class="btn btn-light-blue btn-lg buttonprop">More</button>
+          <a href="greenhut.html"><button type="button" class="btn  buttonprop" style="background-color: #78b122;color: #2f2e41;">More</button></a>
 
-        </div>
+        </div>home
 
       </div>
       <!-- Card -->
@@ -215,9 +218,9 @@
     <!-- Card deck -->
   </div>
   <div class="footer" style="position: relative; top: 50px; width: 100%;">
-    <footer class="text-center">
+    <footer class="text-center mb-5">
       <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
-        <i class="fas fa-angle-up"></i>      </a><br><br>
+        <i class="fas fa-angle-up"></i> </a><br><br>
       <p> <a href="team.html" data-toggle="tooltip" title="Visit team page">Team</a></p>
       <p><a href="product.html" data-toggle="tooltip" title="Visit products page">Products </a></p>
       <p><a href="services.html" data-toggle="tooltip" title="Visit services page">Services </a></p>
