--- a/agri-product.html
+++ b/agri-product.html
@@ -24,25 +24,25 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 
-<body>
+<body style="overflow: hidden;">
 
     <!-- Start your project here-->
     <section id="nav-1">
         <!--Navbar -->
-        <nav class="navbar navbar-1 navbar-expand-lg navbar-dark rgba-white-slight fixed-top">
+        <nav class="navbar navbar-1 navbar-expand-lg navbar-light fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="home.html">
                     <div class="logo">
                         <img src="img/agri_logo1.png">
                     </div>
                 </a>
-                <button class="navbar-toggler" style="background-color: #78b122;" type="button" data-toggle="collapse"
+                <button class="navbar-toggler"  type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent-4" aria-controls="navbarSupportedContent-4"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
-                    <ul class="navbar-nav ml-auto nav-items flex-center">
+                    <ul class="navbar-nav ml-auto nav-items">
                         <li class="nav-item">
                             <a class="nav-link m-1" href="team.html" style="color: #78b122;font-weight: 500;">
                                 <p class="m-1">TEAM</p>
@@ -53,24 +53,9 @@
                                 <p class="m-1">VISION</p>
                             </a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link m-1" id="navbarDropdownMenuLink" data-toggle="dropdown"
-                                aria-haspopup="true" aria-expanded="false" style="color: #78b122;font-weight: 500;">
-                                <p class="m-1">PRODUCTS</p>
-                            </a>
-                            <div class="dropdown-menu no-gutters">
-                                <a class="dropdown-item" href="product.html"
-                                    style="color: #78b122;font-weight: 500;font-size:12px;">AGRICULTURAL PRODUCTS</a>
-                                <a class="dropdown-item" href="product.html"
-                                    style="color: #78b122;font-weight: 500;font-size:12px;">AIRFARMS</a>
-                                <a class="dropdown-item" href="product.html"
-                                    style="color: #78b122;font-weight: 500;font-size:12px;">GROWBAGS</a>
-                            </div>
-                        </li>
-                        </li>
                         <li class="nav-item">
-                            <a class="nav-link m-1" href="flashapp.html" style="color: #78b122;font-weight: 500;">
-                                <p class="m-1">DART</p>
+                            <a class="nav-link m-1" href="product.html" style="color: #78b122;font-weight: 500;">
+                                <p class="m-1">PRODUCT</p>
                             </a>
                         </li>
                         <li class="nav-item">
@@ -112,27 +97,13 @@
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit
                             </p>
-                            <button class="btn success">Add to cart</button>
+                            <button class="btn success" style="background-color: #78b122;border-radius: 20px;">Add to cart</button>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-5 prod-card mx-auto">
                     <div class="row">
-                        <div class="col-sm-6 prod-detail">
-                            <h3>Tomato</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit
-                            </p>
-                            <button class="btn success">Add to cart</button>
-                        </div>
-                        <div class="col-sm-6">
-                            <img class="prod-image" src="img/tomato.png">
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-5 prod-card mx-auto">
-                    <div class="row">
-                        <div class="col-sm-6 prod-detail">
+                        <div class="col-sm-6 prod-detail ">
                             <img class="prod-image" src="img/tomato.png">
                         </div>
                         <div class="col-sm-6 prod-detail">
@@ -140,28 +111,84 @@
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit
                             </p>
-                            <button class="btn success">Add to cart</button>
+                            <button class="btn success" style="background-color: #78b122;border-radius: 20px;">Add to cart</button>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-5 prod-card mx-auto">
                     <div class="row">
+                        <div class="col-sm-6 prod-detail ">
+                            <img class="prod-image" src="img/tomato.png">
+                        </div>
                         <div class="col-sm-6 prod-detail">
                             <h3>Tomato</h3>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit
                             </p>
-                            <button class="btn success">Add to cart</button>
-                        </div>
-                        <div class="col-sm-6">
-                            <img class="prod-image" src="img/tomato.png">
+                            <button class="btn success" style="background-color: #78b122;border-radius: 20px;">Add to cart</button>
                         </div>
                     </div>
+                </div>
+                <div class="col-sm-5 prod-card mx-auto">
+                    <div class="row">
+                        <div class="col-sm-6 prod-detail ">
+                            <img class="prod-image" src="img/tomato.png">
+                        </div>
+                        <div class="col-sm-6 prod-detail">
+                            <h3>Tomato</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                            </p>
+                            <button class="btn success" style="background-color: #78b122;border-radius: 20px;">Add to cart</button>
+                        </div>
+                    </div>
+                </div>
                 </div>
             </div>
 
         </div>
     </section>
+    <div class="footer" style="position: relative; top: 50px; width: 100%;overflow: hidden;">
+        <footer class="text-center mb-5">
+          <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
+            <i class="fas fa-angle-up"></i> </a><br><br>
+          <p> <a href="team.html" data-toggle="tooltip" title="Visit team page">Team</a></p>
+          <p><a href="product.html" data-toggle="tooltip" title="Visit products page">Products </a></p>
+          <p><a href="services.html" data-toggle="tooltip" title="Visit services page">Services </a></p>
+          <p> <a href="vision.html" data-toggle="tooltip" title="Visit vision page">Vision</a></p>
+          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
+          <!-- Social buttons -->
+          <ul class="list-unstyled list-inline text-center">
+            <li class="list-inline-item">
+              <a class="btn-floating btn-fb mx-1">
+                <i class="fab fa-facebook-f"> </i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a class="btn-floating btn-tw mx-1">
+                <i class="fab fa-twitter"> </i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a class="btn-floating btn-gplus mx-1">
+                <i class="fab fa-google-plus-g"> </i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a class="btn-floating btn-li mx-1">
+                <i class="fab fa-linkedin-in"> </i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a class="btn-floating btn-dribbble mx-1">
+                <i class="fab fa-dribbble"> </i>
+              </a>
+            </li>
+          </ul>
+          <!-- Social buttons -->
+        </footer>
+        </div>
     <!-- End your project here-->
     <!-- Development version -->
     <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.js"></script>
