--- a/farmset.html
+++ b/farmset.html
@@ -1,12 +1,27 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-  <title>SERVICES</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="css/product.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Farm setting</title>
+    <!-- MDB icon -->
+    <!-- Font Awesome -->
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
+    <!-- Google Fonts Roboto -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <!-- Material Design Bootstrap -->
+    <link rel="stylesheet" href="css/mdb.min.css">
+    <!-- Your custom styles (optional) -->
+    <link rel="stylesheet" href="css/product.css">
+    <!-- <link rel="stylesheet" href="home.css"> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
   <style>
     @media (max-width: 500px) {
@@ -17,7 +32,7 @@
     #para1 {
       text-align: center;
       margin-bottom: 5%;
-      color: green;
+      color: #78b122;
       margin-top: 8%;
     }
 
@@ -36,7 +51,7 @@
     }
 
     #para5 {
-      background-color: green;
+      background-color: #78b122;
       color: white;
     }
 
@@ -58,62 +73,62 @@
 <body>
 
   <!-- Start your project here-->
-  <section id="nav-1" class="pb-5">
+  <section id="nav-1" class="mb-5">
     <!--Navbar -->
     <nav class="navbar navbar-1 navbar-expand-lg navbar-light fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="home.html">
-          <div class="logo">
-            <img src="img/agri_logo1.png">
-          </div>
-        </a>
-        <button class="navbar-toggler"  type="button" data-toggle="collapse"
-          data-target="#navbarSupportedContent-4" aria-controls="navbarSupportedContent-4" aria-expanded="false"
-          aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
-          <ul class="navbar-nav ml-auto nav-items flex-center">
-            <li class="nav-item">
-              <a class="nav-link m-1" href="team.html" style="color: #78b122;font-weight: 500;">
-                <p class="m-1">TEAM</p>
+        <div class="container">
+            <a class="navbar-brand" href="index.html">
+                <div>
+                  <img  class="logo" src="img/Logo with Side Text - White.png"></div>
               </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link m-1" href="vision.html" style="color: #78b122;font-weight: 500;">
-                <p class="m-1">VISION</p>
-              </a>
-            </li> <li class="nav-item">
-              <a class="nav-link m-1" href="product.html" style="color: #78b122;font-weight: 500;">
-                <p class="m-1">PRODUCTS</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link m-1" href="services.html" style="color: #78b122;font-weight: 500;">
-                <p class="m-1">SERVICE</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link m-1" href="home.html" style="color: #78b122;font-weight: 500;">
-                <p class="m-1">CONTACT</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link">
-                <img src="img/cart5.png">
-              </a>
-            </li>
-          </ul>
+            <button class="navbar-toggler" type="button" data-toggle="collapse"
+                data-target="#navbarSupportedContent-4" aria-controls="navbarSupportedContent-4"
+                aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
+                <ul class="navbar-nav ml-auto nav-items">
+                    <li class="nav-item">
+                        <a class="nav-link m-1" href="team.html" style="color: #78b122;font-weight: 500;">
+                            <p class="m-1">TEAM</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link m-1" href="vision.html" style="color: #78b122;font-weight: 500;">
+                            <p class="m-1">VISION</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link m-1" href="product.html" style="color: #78b122;font-weight: 500;">
+                            <p class="m-1">PRODUCTS</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link m-1" href="services.html" style="color: #78b122;font-weight: 500;">
+                            <p class="m-1">SERVICE</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link m-1" href="index.html" style="color: #78b122;font-weight: 500;">
+                            <p class="m-1">CONTACT</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link">
+                            <img src="img/cart5.png">
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </div>
     </nav>
     <!--/.Navbar -->
-  </section>
+</section>
 
 
   <div class="container">
-    <div id="para1" class="services">
-      <h1>SERVICES</h1>
+    <div id="para1" class="services py-5">
+      <h1>Farm Setting</h1>
     </div>
     <div class="team" id="para3">
       <div class="row">
@@ -171,23 +186,83 @@
 
                 </div>
                 <div class="modal-footer d-flex justify-content-center">
-                  <button class="btn btn-success">Send <i class="fas fa-paper-plane-o ml-1"></i></button>
+                  <button class="btn" style="background-color: #78b122;">Send</button>
                 </div>
               </div>
             </div>
           </div>
 
           <div class="text-center">
-            <a href="" class="btn btn-default btn-rounded mb-4" data-toggle="modal" 
+            <a href="" class="btn  btn-rounded mb-4" data-toggle="modal" 
               data-target="#modalContactForm" style="background-color: #78b122;">Need this service</a>
-              <a href="services.html" class=" btn btn-default btn-rounded mb-4"  style="background-color: #78b122;">Go Back</a>
+              <a href="services.html" class=" btn btn-rounded mb-4"  style="background-color: #78b122;">Go Back</a>
           </div>
 
         </div>
       </div>
-    </div>
+    </div> 
 
   </div>
+
+  <section style="overflow-y: hidden;">
+
+    <div class="footer mb-5" style="position: relative; top: 50px; width: 100%;">
+      <footer class="text-center">
+        <a class="up-arrow" href="#nav-1" data-toggle="tooltip" title="TO TOP">
+          <i class="fas fa-angle-up"></i>      </a><br><br>
+        <p> <a href="team.html" data-toggle="tooltip" title="Visit team page">Team</a></p>
+        <p><a href="product.html" data-toggle="tooltip" title="Visit products page">Products </a></p>
+        <p><a href="services.html" data-toggle="tooltip" title="Visit services page">Services </a></p>
+        <p> <a href="vision.html" data-toggle="tooltip" title="Visit vision page">Vision</a></p>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  
+        <!-- Social buttons -->
+        <ul class="list-unstyled list-inline text-center">
+          <li class="list-inline-item">
+            <a class="btn-floating btn-fb mx-1">
+              <i class="fab fa-facebook-f"> </i>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="btn-floating btn-tw mx-1">
+              <i class="fab fa-twitter"> </i>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="btn-floating btn-gplus mx-1">
+              <i class="fab fa-google-plus-g"> </i>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="btn-floating btn-li mx-1">
+              <i class="fab fa-linkedin-in"> </i>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="btn-floating btn-dribbble mx-1">
+              <i class="fab fa-dribbble"> </i>
+            </a>
+          </li>
+        </ul>
+        <!-- Social buttons -->
+      </footer>
+    </div>
+    </section>
+    <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.js"></script>
+
+    <!-- Production version -->
+    <script src="https://unpkg.com/@popperjs/core@2"></script>
+    <!-- jQuery -->
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <!-- Bootstrap tooltips -->
+    <script type="text/javascript" src="js/popper.js"></script>
+    <script type="text/javascript" src="js/popper.min.js"></script>
+    <!-- Bootstrap core JavaScript -->
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <!-- MDB core JavaScript -->
+    <script type="text/javascript" src="js/mdb.min.js"></script>
+    <!-- Your custom scripts (optional) -->
+    <script type="text/javascript"></script>
 </body>
 
 </html>
