--- a/index1.html
+++ b/index1.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="home.css">
-  <!-- <link rel="stylesheet" href="home1.css"> -->
+  <link rel="stylesheet" href="home1.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -18,44 +18,25 @@
   <link rel="stylesheet" href="bootstrap-3.3.3-dist/css/bootstrap-responsive.css">
 </head>
 
-<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60" style="">
 
-
+<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
+  
   <div class="jumbotron text-center">
-
     <h1>What we are?</h1>
-    <p style="font-weight: 400;">We are a startup which combines modern techniques with traditional methods to increase productivity of crops. We
-      aim to bring a change in the field of agriculture by efficient combination of technologies like artificial
-      intelligence with IOT and modern farming techniques.
-
-      We provide a platform for farmers to sell their produce at a reasonable price which will be delivered to the
-      customers as and when required . We also focus on creating new products which employ modern technologies to make
-      farming simpler.</p>
+    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam
+      malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.
+      Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci. Aenean dignissim
+      pellentesque felis.Morbi in sem quis dui placerat ornare. Pellentesque odio nisi, euismod in, pharetra a,
+      ultricies in, diam. Sed arcu. Cras consequat.</p>
   </div>
-
-
-
-
-<!-- 
-  <div allign="center" class="m-5 col-sm-8 video-div embed-responsive embed-responsive-16by9" style="position: relative; top: -10px;">
-    <video controls loop class="embed-responsive-item" style="margin: auto;">
-      <source src="img/video.mp4" type="video/mp4">
+  <div allign="center" class="embed-responsive embed-responsive-16by9" style="position: relative; top: -10px;">
+    <video controls loop class="embed-responsive-item">
+      <source src="img/demo.mp4" type="video/mp4">
     </video>
-  </div> -->
-  <div class="video-main">
-    <center><video class="video-div" controls  autoplay loop  muted>
-      <source src="img/video.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-    </video> 
-    </center>
-    
   </div>
-
-
-
-  <div class="container-fluid mt-3" style="padding: 60px 50px;">
+  <div class="container-fluid" style="padding: 60px 50px;">
     <div class="row">
-      <div class="col-sm-7">
+      <div class="col-sm-8">
         <h4>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.<br> Donec odio. Quisque volutpat mattis <br>eros.
           Nullam malesuada erat ut turpis. Suspendisse urna nibh, <br>viverra non, semper suscipit, posuere a, pede.
         </h4>
@@ -63,8 +44,8 @@
           Nullam malesuada erat ut turpis. Suspendisse urna nibh,<br> viverra non, semper suscipit, posuere a, pede..
         </p>
       </div>
-      <div class="col-sm-5">
-        <img class="image-fluid" style="max-width: 100%;max-height: 100%;" src="img/horticulture_video.jpg">
+      <div class="col-sm-4">
+        <img src="img/vegtables.jpg">
       </div>
     </div>
   </div>
@@ -157,8 +138,8 @@
           <div class="col-sm-6">
             <p>Contact us and we'll get back to you within 24 hours.</p>
             <p><span class="glyphicon glyphicon-map-marker"></span> Kollam , Kerala</p>
-            <p><span class="glyphicon glyphicon-phone"></span> +91 9061714290</p>
-            <p><span class="glyphicon glyphicon-envelope"></span> agrivator@gmail.com</p>
+            <p><span class="glyphicon glyphicon-phone"></span> +00 1515151515</p>
+            <p><span class="glyphicon glyphicon-envelope"></span> myemail@something.com</p>
           </div>
           <div class="col-sm-6">
             <div class="row">
@@ -203,10 +184,11 @@ var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
       <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
         <span class="glyphicon glyphicon-chevron-up"></span>
       </a><br><br>
-      <p> <a href="team.html" data-toggle="tooltip" title="Visit team page">Team</a></p>
-      <p><a href="product.html" data-toggle="tooltip" title="Visit products page">Products </a></p>
-      <p><a href="services.html" data-toggle="tooltip" title="Visit services page">Services </a></p>
-      <p> <a href="vision.html" data-toggle="tooltip" title="Visit vision page">Vision</a></p>
+      <p>Team <a href="team.html" data-toggle="tooltip" title="Visit w3schools">Agrivator</a></p>
+      <p>Flashapp <a href="flashapp.html" data-toggle="tooltip" title="Visit w3schools">Agrivator</a></p>
+      <p>Products <a href="product.html" data-toggle="tooltip" title="Visit w3schools">Agrivator</a></p>
+      <p>Services <a href="services.html" data-toggle="tooltip" title="Visit w3schools">Agrivator</a></p>
+      <p>Vision <a href="vision.html" data-toggle="tooltip" title="Visit w3schools">Agrivator</a></p>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
       <!-- Social buttons -->
@@ -252,23 +234,36 @@ var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="#">
-          <div class="logo m-5">
-            <img src="img/Logo with Side Text - White.png" style="width: 180px;"></div>
+          <div class="logo">
+            <img src="img/agri_logo1.png"></div>
         </a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="team.html">TEAM</a></li>
           <li><a href="vision.html">VISION</a></li>
-          <li><a href="product.html">PRODUCTS</a></li>
+          <li>
+            <div class="dropdown">
+              <a href="product.html">
+                <button class="dropbtn">PRODUCTS
+                  <i class="fa fa-caret-down"></i>
+                </button></a>
+              <div class="dropdown-content">
+                <a href="#">Agricultural Products</a>
+                <a href="#">Air Farmers</a>
+              </div>
+            </div>
+          </li>
+          <li><a href="flashapp.html">FLASH</a></li>
           <li><a href="services.html">SERVICES</a></li>
           <li><a href="#contact">CONTACT</a></li>
           <li><a href="#cart">
               <div class="cart">
                 <img src="img/cart5.png">
               </div>
-            </a>
-          </li>
+            </a></li>
+
+
         </ul>
       </div>
     </div>
