--- a/product.html
+++ b/product.html
@@ -22,17 +22,16 @@
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body style="overflow: hidden;">
 
   <!-- Start your project here-->
   <section id="nav-1">
     <!--Navbar -->
     <nav class="navbar navbar-1 navbar-expand-lg navbar-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="home.html">
-          <div class="logo">
-            <img src="img/agri_logo1.png">
-          </div>
+        <a class="navbar-brand" href="index.html">
+          <div>
+            <img  class="logo" src="img/Logo with Side Text - White.png"></div>
         </a>
         <button class="navbar-toggler"  type="button" data-toggle="collapse"
           data-target="#navbarSupportedContent-4" aria-controls="navbarSupportedContent-4" aria-expanded="false"
@@ -40,7 +39,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
-          <ul class="navbar-nav ml-auto nav-items flex-center">
+          <ul class="navbar-nav ml-auto nav-items">
             <li class="nav-item">
               <a class="nav-link m-1" href="team.html" style="color: #78b122;font-weight: 500;">
                 <p class="m-1">TEAM</p>
@@ -51,24 +50,9 @@
                 <p class="m-1">VISION</p>
               </a>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link m-1" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
-                aria-expanded="false" style="color: #78b122;font-weight: 500;">
-                <p class="m-1">PRODUCTS</p>
-              </a>
-              <div class="dropdown-menu no-gutters">
-                <a class="dropdown-item" href="product.html"
-                  style="color: #78b122;font-weight: 500;font-size:12px;">AGRICULTURAL PRODUCTS</a>
-                <a class="dropdown-item" href="product.html"
-                  style="color: #78b122;font-weight: 500;font-size:12px;">AIRFARMS</a>
-                <a class="dropdown-item" href="product.html"
-                  style="color: #78b122;font-weight: 500;font-size:12px;">GROWBAGS</a>
-              </div>
-            </li>
-            </li>
             <li class="nav-item">
-              <a class="nav-link m-1" href="flashapp.html" style="color: #78b122;font-weight: 500;">
-                <p class="m-1">DART</p>
+              <a class="nav-link m-1" href="product.html" style="color: #78b122;font-weight: 500;">
+                <p class="m-1">PRODUCTS</p>
               </a>
             </li>
             <li class="nav-item">
@@ -77,7 +61,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link m-1" href="home.html" style="color: #78b122;font-weight: 500;">
+              <a class="nav-link m-1" href="index.html" style="color: #78b122;font-weight: 500;">
                 <p class="m-1">CONTACT</p>
               </a>
             </li>
@@ -92,18 +76,18 @@
     </nav>
     <!--/.Navbar -->
   </section>
-  <section id="sec-agri" class="mt-5" style="overflow-y: hidden;">
-    <div class="row no-gutters section-title">
-      <div class="air-desc col-sm-6" style="height: auto;">
+  <section id="sec-agri" class="mt-5 container" style="overflow-y: hidden;">
+    <div class="row no-gutters section-title mt-5">
+      <div class="air-desc col-sm-5 mx-auto" style="height: auto;">
         <p class="air-description row" style="color: #2f2e41;height: auto;">
-         <center><span class=" air-head" style="text-align: center;">AGRICULTURAL PRODUCTS</span></center>
+         <center><span class=" air-head " style="margin: 0 auto;">AGRICULTURAL PRODUCTS</span></center>
         </p>
       </div>
-      <div class="air-image col-sm-6 ">
+      <div class="air-image col-sm-5 mx-auto ">
         <img class="air-image img-fluid" src="img/horticulture_video.jpg">
       </div>
     </div>
-    <div class="section-description m-5 col-sm-6 mx-auto ">
+    <div class="section-description m-5 col-sm-8 mx-auto ">
       <p class="mx-auto">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
         tempor incididunt ut labore et dolore
@@ -119,19 +103,19 @@
       </a>
       </p>
     </div>
-    <hr class="mt-5 mb-5">
+    <hr class="mt-3 mb-3">
 
   </section>
-  <section id="sec-agri" class="mt-5">
+  <section id="sec-agri" class="mt-3 container">
     <div class="row no-gutters section-title">
-      <div class="air-desc col-sm-6 mx-auto" style="height: auto;">
+      <div class="air-desc col-sm-5 mx-auto" style="height: auto;">
         <p class="air-description row" style="color: #2f2e41;height: auto;">
           <center>
             <span class=" air-head" style="text-align: center;">Airfarms</span>
           </center>
         </p>
       </div>
-      <div class="air-image col-sm-6 " style="width: auto;height: auto;">
+      <div class="air-image col-sm-5 " style="width: auto;height: auto;">
         <center><img class="air-image img-fluid" src="img/air.jpg"></center>
       </div>
     </div>
@@ -151,9 +135,9 @@
       </a>
       </p>
     </div>
-    <hr class="mt-5 mb-5">
+    <hr class="mt-3 mb-3">
   </section>
-  <section id="sec-agri" class="mt-5">
+  <section id="sec-agri" class="container mt-3">
     <div class="row no-gutters section-title">
       <div class="air-desc col-sm-6" style="height: auto;">
         <p class="air-description row" style="color: #2f2e41;height: auto;">
@@ -183,7 +167,7 @@
   </section>
   <section>
 
-    <div class="footer" style="position: relative; top: 50px; width: 100%;">
+    <div class="footer mb-5" style="position: relative; top: 50px; width: 100%;">
       <footer class="text-center">
         <a class="up-arrow" href="#nav-1" data-toggle="tooltip" title="TO TOP">
           <i class="fas fa-angle-up"></i>      </a><br><br>
@@ -232,6 +216,10 @@
   <!-- Production version -->
   <!-- <script src="https://unpkg.com/@popperjs/core@2"></script> -->
   <!-- jQuery -->
+  <script>
+  
+  </script>
+
   <script type="text/javascript" src="js/jquery.min.js"></script>
   <!-- Bootstrap tooltips -->
   <script type="text/javascript" src="js/popper.js"></script>
